# settlement-automation

./: .env.example  .gitignore  LICENSE  README.md  README_updated.md  RUN_MANUAL_SETTLEMENT_FIX.txt  pyproject.toml  requirements.txt
config/: dtn_reports.py  excel_mapping.py  locations.py  portal_rules.py  settings.py  sunoco_reports.py  supplier_accounts.py  supplier_rules.py
data/tmp/: command_edit.txt
output/daily_runs/: latest.json
output/notifications/: 2026-07-01_daily_summary.html  2026-07-01_daily_summary.txt  2026-07-02_daily_summary.html  2026-07-02_daily_summary.txt  2026-07-03_daily_summary.html  2026-07-03_daily_summary.txt  (+6 more)
scripts/: _path_setup.py  browser_download_smoke.py  clear_excel_entries.py  create_settlement_workbooks.py  fetch_and_parse_probe.py  fetch_only.py  parse_raw_probe.py  probe_dtn_range_download.py  probe_sunoco_api.py  probe_sunoco_settlement.py  repair_script.cmd  repair_valero_2026_07_10.ps1  run_daily.py  run_daily_batch.py  run_daily_parse_write_notify.py  run_daily_task.ps1  send_test_notification_email.py  wite_excel_probe.py  write_excel_probe.py  write_excel_range.py
tests/: test_browser_smoke.py  test_connector_factory.py  test_credentials.py  test_daily_run_summary.py  test_download_manager.py  test_dtn_content_selection.py  test_dtn_date.py  test_dtn_reports.py  test_email_senders.py  test_excel_mapping.py  test_fetch_reports.py  test_notifications.py  test_settings.py  test_sunoco_api.py  test_sunoco_capture.py  test_sunoco_date.py  test_sunoco_reports.py  test_supplier_selection.py  test_valero_parser.py
(+80 files in other folders)
