[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prestige-settlement-automation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "python-dotenv",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]